# SCTW-DS

./: README.md
SCTW-DS/: CMakeLists.txt
SCTW-DS/scripts/: __init__.py
SCTW-DS/scripts/Regression/: __init__.py
SCTW-DS/scripts/Regression/LinearRegression/: MultiVariateLinearRegression.py
SCTW-DS/scripts/Utils/: __init__.py  progress_bar.py  trainTestSplit.py
SCTW-DS/src/NeuralNetwork/cpp/: Layers.cpp
SCTW-DS/src/NeuralNetwork/header/: Layers.h  Network.h
SCTW_DS/: CMakeLists.txt  __init__.py
SCTW_DS/NeuralNet/: __init__.py
SCTW_DS/Regression/: __init__.py
SCTW_DS/Utils/: __init__.py
SCTW_DS/scripts/: __init__.py
SCTW_DS/scripts/Regression/LinearRegression/: LinearRegression.py
SCTW_DS/scripts/Regression/PolynomialRegression/: PolynomialRegression.py
SCTW_DS/scripts/Utils/: __init__.py  dataCleaner.py  generateDataset.py  trainTestSplit.py
SCTW_DS/src/NeuralNetwork/cpp/: FullyConnectedLayer.cpp  Network.cpp
SCTW_DS/src/NeuralNetwork/header/: FullyConnectedLayer.h  Network.h
SCTW_DS/src/NeuralNetwork/misc/: ProgressBar.cpp
